fix: input height issue on mobile

--- a/src/app/countdown/countdown.component.scss
+++ b/src/app/countdown/countdown.component.scss
@@ -86,8 +86,9 @@ $form-width-mobile: $input-width;
 
   .countdown__input-label {
     position: absolute;
-    top: 0;
+    top: -1.625rem;
     left: 0.625rem;
+    font-size: 1.25rem;
     background: #f5f3f3;
     padding: 0 0.375rem;
     z-index: 1;
@@ -102,6 +103,7 @@ $form-width-mobile: $input-width;
     border: 1px solid #ccc;
     border-radius: 0.25rem;
     width: 100%;
+    height: 2.125rem;
     position: relative;
     z-index: 0;
     font-size: 1.5rem;
@@ -110,13 +112,6 @@ $form-width-mobile: $input-width;
 
     &:focus {
       border-color: $primary-color;
-    }
-
-    &:focus + .countdown__input-label,
-    &:not(:placeholder-shown) + .countdown__input-label {
-      top: -1.625rem;
-      font-size: 1.25rem;
-      color: $primary-color;
     }
   }
 }
